# Task-3.2

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  vitdec.cpp  vitdec.h
src/tests/: CMakeLists.txt  tests.cpp
